<resources>
    <string name="app_name">MIUI Cleaner Plus</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scanning">Scanning…</string>
    <string name="scanning_m_of_n">Scanning %1$d/%2$d</string>
    <string name="settings_about">About</string>
    <string name="settings_basic">Basic</string>
    <string name="settings_grade">Feedback</string>
    <string name="settings_share">Share</string>
    <string name="settings_version_update">Update</string>
    <string name="short_cut_name">1 Tap Clean</string>
    <string name="slogan">Faster, smoother and quicker</string>
    <string name="software_top_text">Apps: %1$s, Occupied: %2$s</string>
    <item type="string" name="spb_default_speed">1.0</item>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="license">Developed by Wawetech</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="phone_boost">Phone Boost</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="boost_notice">Some apps may reopen automatically after they have been forced to stop running.</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="category_advanced">Advanced</string>
    <string name="category_def">General</string>
    <string name="category_other">Other</string>
    <string name="clean_memory">Clean Memory</string>
    <string name="cleaned">Cleaned (%1$s)</string>
    <string name="com_facebook_loading">Loading...</string>
    <item type="string" name="cpb_default_rotation_speed">1.0</item>
    <item type="string" name="cpb_default_sweep_speed">1.0</item>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="define_smoothprogressbar" />
    <string name="drawer_close">drawer_close</string>
    <string name="drawer_open">drawer_open</string>
    <string name="empty_cache">Cache is empty.</string>
    <string name="font_fontFamily_material_item">sans-serif</string>
    <string name="junk_clean">Junk Clean</string>
    <string name="app_software_manage">Manage App</string>
    <string name="banner">ca-app-pub-2000263817425717/1957491587</string>
    <string name="inter">ca-app-pub-2000263817425717/3434224781</string>
    <string name="press_to_exit">Press again to exit application</string>

</resources>
