<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/splash_bg_color">

    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="200.0dip"
        android:src="@drawable/abc" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="#ffffffff"
        android:textSize="26.0sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7.0dip"
        android:gravity="center_horizontal"
        android:text="@string/slogan"
        android:textColor="#b3ffffff"
        android:textSize="18.0sp" />

    <TextView
        android:id="@+id/textCopyRight"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10.0dip"
        android:gravity="bottom|center"
        android:text="@string/license"
        android:textColor="#b3ffffff"
        android:textSize="18.0sp" />
</LinearLayout>